2003-07-04 Christian Schaller <Uraeus@gnome.org>

	* Makefile.am, sound-juicer.spec.in
	Fix the spec file and make sure it gets packaged

2003-07-03  Ross Burton  <ross@burtonini.com>

	* src/sj-musicbrainz.c:
	If Musicbrainz doesn't know how long a track is, work it out from
	the sector size.

	* src/mb-test.c:
	Ditto.

	Thanks to Bastien again for this patch.

2003-07-02  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.h
	* src/sj-extracting.c:
	Make parse_pattern public as filepath_parse_pattern()

	* data/sound-juicer.glade:
	Add a label as an example for the path.

	* src/sj-prefs.c:
	Update the example path label.

	These patches are 90% from Bastien Nocera.
	
2003-07-02  Ross Burton  <ross@burtonini.com>

	* src/sj-utils.c:
	Whoops, close the opened fd...

2003-07-02  Ross Burton  <ross@burtonini.com>

	* src/sj-util.h:
	* src/sj-util.c:
	Added eject_cdrom(). Non-linux types please submit patches to make
	this work for you!

	* src/sj-main.c:
	Use eject_cdrom() instead of running system("eject").

2003-07-02  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Remove the use of frames as some themes insist on drawing the
	lines. This patch mostly from Bastien Nocera, I just tweaked the
	borders.

2003-07-01  Arafat Medini <lumina@silverpen.de>

	* configure.in: Added "ar" Arabic to ALL_LINGUAS.

2003-06-30  Ross Burton  <ross@burtonini.com>

	* src/sj-extractor.c:
	Free the old pipeline.

2003-06-29  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	Removed build-time checks for MP3 encoders.

	* src/sj-extractor.c:
	Do a run-time check on the MPEG encoder.
	
	* src/sound-juicer.h: added a define for the use_http_proxy entryy
	* src/sj-main.c:
	Fix the proxy settings not being used for the first time, fix
	use_http_proxy being ignored.
	
	* src/sj-musicbrainz.c:
	Fix disabling proxies the settings, added an error message in
	sj_musicbrainz_list_albums().

2003-06-29  Christophe Merlet  <redfox@redfoxcenter.org>
