@@ -19,6 +19,7 @@ AC_ISC_POSIX
 AC_PROG_CC
 AM_PROG_CC_STDC
 AC_HEADER_STDC
+AC_PROG_CXX
 AC_PROG_INTLTOOL([0.20])
 
 ALL_LINGUAS="ar be ca cs de es fr pt sv zh_TW"
