@@ -1,3 +1,11 @@
+2003-07-07  Bastien Nocera  <hadess@hadess.net>
+
+	* configure.in: upd for libbacon update
+	* src/Makefile.am:
+	* src/bacon-cd-selection.c:
+	* src/cd-drive.c:
+	* src/cd-drive.h: ditto
+
 2003-07-04 Christian Schaller <Uraeus@gnome.org>
 
 	* Makefile.am, sound-juicer.spec.in
